# phono3py

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  LICENSE  MANIFEST.in  README.html  README.md  api-reference.html  auxiliary-tools.html  changelog.html  citation.html  command-options.html  crystal.html  cutoff-pair.html  direct-solution.html  examples.html  external-tools.html  genindex.html  get_nanoversion.sh  grid.html  hdf5_howto.html  index.html  input-output-files.html  install.html  inter-band-transport.html  interfaces.html  lammps.html  migration-v4.html  objects.inv  output-files.html  output-files.txt  phono3py-api.html  phono3py-init.html  phono3py-load.html  phono3py-load.md  phono3py.html  pwscf.html  pypolymlp.html  (+17 more)
.doctrees/: README.doctree  auxiliary-tools.doctree  changelog.doctree  citation.doctree  command-options.doctree  crystal.doctree  cutoff-pair.doctree  direct-solution.doctree  environment.pickle  examples.doctree  external-tools.doctree  grid.doctree  hdf5_howto.doctree  index.doctree  input-output-files.doctree  install.doctree  inter-band-transport.doctree  interfaces.doctree  lammps.doctree  migration-v4.doctree  output-files.doctree  phono3py-api.doctree  phono3py-init.doctree  phono3py-load.doctree  phono3py.doctree  pwscf.doctree  pypolymlp.doctree  qe.doctree  random-displacements.doctree  reference.doctree  rust-backend.doctree  tips.doctree  turbomole.doctree  vasp.doctree  wigner-solution.doctree  workflow.doctree  workload-distribution.doctree
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: phono3py-pytest-conda-macos.yml  phono3py-pytest-conda-mkl-phphmtblas.yml  phono3py-pytest-conda-mkl-v2.yml  phono3py-pytest-conda-mkl.yml  wheels.yml  (+16 more)
_modules/: index.html
_sources/: README.md  auxiliary-tools.md  auxiliary-tools.rst.txt  auxiliary-tools.txt  changelog.md  changelog.md.txt  changelog.rst.txt  changelog.txt  citation.md  citation.md.txt  citation.rst.txt  command-options.md  command-options.md.txt  command-options.rst.txt  command-options.txt  crystal.md  cutoff-pair.rst.txt  direct-solution.md  direct-solution.md.txt  examples.md  examples.rst.txt  examples.txt  external-tools.rst.txt  hdf5_howto.md  hdf5_howto.rst.txt  index.md  index.rst.txt  index.txt  input-output-files.md  input-output-files.md.txt  install.md  install.md.txt  install.rst.txt  install.txt  interfaces.md.txt  interfaces.rst.txt  interfaces.txt  lammps.md  output-files.rst.txt  output-files.txt  (+22 more)
_static/: documentation_options.js
anharmonic/: version.py
c/: CMakeLists.txt  _lapackepy.c  _phono3py.c  _phono3py.cpp  _phononcalc.c  _phononcalc.cpp  _phononmod.c  _recgrid.cpp  bzgrid.c  bzgrid.h  collision_matrix.c  collision_matrix.h  dynmat.c  dynmat.h  fc3.c  fc3.h  funcs.c  funcs.h  grgrid.c  grgrid.h  gridsys.c  gridsys.h  imag_self_energy_with_g.c  imag_self_energy_with_g.h  interaction.c  interaction.h  isotope.c  isotope.h  kpoint.c  kpoint.h  lagrid.c  lagrid.h  lapack_wrapper.c  lapack_wrapper.h  phono3py.c  phono3py.h  phonoc_array.c  phonoc_array.h  phonoc_const.h  phonoc_utils.c  (+31 more)
c/anharmonic/other/: isotope.c
c/anharmonic/phonon3/: collision_matrix.c  fc3.c  frequency_shift.c  imag_self_energy_with_g.c  interaction.c  pp_collision.c  pp_collision.h  real_self_energy.c  real_to_reciprocal.c  real_to_reciprocal.h  reciprocal_to_normal.c
c/anharmonic/triplet/: triplet.c  triplet_iw.c  triplet_iw.h  triplet_kpoint.c  triplet_kpoint.h
c/anharmonic_h/other_h/: isotope.h
c/anharmonic_h/phonon3_h/: collision_matrix.h  fc3.h  frequency_shift.h  imag_self_energy_with_g.h  interaction.h  pp_collision.h  real_self_energy.h  real_to_reciprocal.h  reciprocal_to_normal.h
c/anharmonic_h/triplet_h/: triplet.h  triplet_iw.h  triplet_kpoint.h
c/harmonic/: dynmat.c  lapack_wrapper.c  phonoc_array.c  phonoc_array.h  phonoc_utils.c  phonon.c  phonon.h
c/harmonic_h/: dynmat.h  lapack_wrapper.h  phonoc_array.h  phonoc_utils.h  phonon.h
conda/: .binstar.yml  anaconda_deploy.sh  bld.bat  build.sh  meta.yaml
ctest/: CMakeLists.txt  README.md  test_gridsys.cpp  test_niggli.cpp  utils.c  utils.h
ctest/fortran/: CMakeLists.txt
ctest/fortran/gridsysf/: CMakeLists.txt  test_gridsysf.f90
doc/: README.md  api-reference.md  auxiliary-tools.md  auxiliary-tools.rst  changelog.md  changelog.rst  citation.md  citation.rst  command-options.md  command-options.rst  conf.py  crystal.md  crystal.rst  cutoff-pair.md  cutoff-pair.rst  direct-solution.md  direct-solution.rst  examples.md  examples.rst  external-tools.md  external-tools.rst  grid.md  hdf5_howto.md  hdf5_howto.rst  index.md  index.rst  input-output-files.md  install.md  install.rst  inter-band-transport.md  interfaces.md  interfaces.rst  lammps.md  migration-v4.md  output-files.md  output-files.rst  phono3py-api.md  phono3py-init.md  phono3py-load.md  phono3py.md  (+18 more)
example/: AlN-LDA.tar.lzma
fortran/: CMakeLists.txt  gridsysf.f90
phono3py/: __init__.py  _lang.py  api_isotope.py  api_jointdos.py  api_phono3py.py  file_IO.py  version.py
rust/: Cargo.toml  pyproject.toml
rust/src/: bzgrid.rs  collision_matrix.rs  common.rs  dynmat.rs  fc3.rs  funcs.rs  grgrid.rs  imag_self_energy.rs  interaction.rs  isotope.rs  lib.rs  pp_collision.rs  real_self_energy.rs  real_to_reciprocal.rs  recip_rotations.rs  reciprocal_to_normal.rs  snf3x3.rs  tetrahedron_method.rs  transform_rotations.rs  triplet.rs  triplet_grid.rs  triplet_iw.rs
scripts/: gaccum  kaccum  kdeplot  phono3py  phono3py-coleigplot  phono3py-kaccum  phono3py-kdeplot  phono3py-load  phono3py-sanitizer
test/: FORCES_FC3_si_pbesol  Si-111-222-fd.tar.xz  Si-111-222-rd.tar.xz  conftest.py  kappa-m111111_si_pbesol.hdf5  phono3py_params-Si111-rd.yaml.xz  phono3py_params_AlN332.yaml.xz  phono3py_params_MgO-222rd-444fd.yaml.xz  phono3py_params_NaCl111.yaml  phono3py_params_NaCl222.yaml.xz  phono3py_params_Si-111-222-fd.yaml.xz  phono3py_params_Si-111-222-rd.yaml.xz  phono3py_params_Si-111-222.yaml  phono3py_params_Si111.yaml  phono3py_si_pbesol.yaml  phonopy_params-Si111-iterha.yaml.xz  test_api_phono3py.py
(+477 files in other folders)
