[build-system]
requires = ["setuptools", "wheel", "numpy"]

[tool.ruff]
line-length = 88
lint.select = [
    "F", # Flake8
    "B", # Black
    "I", # isort
    "E", # pycodestyle-errors
    "D", # pydocstyle
]
lint.extend-ignore = [
    "D417",
    "D100",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
