[package]
name = "phono3py_rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[lib]
name = "phono3py_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py310"] }
numpy = "0.23"
rayon = "1"

[profile.release]
lto = "thin"
codegen-units = 1
